--- a/layout/default.xhtml
+++ b/layout/default.xhtml
@@ -1,9 +1,9 @@
 <html>
   <head>
     <title>The Innate beauty of Ramaze</title>
-    #{css :screen}
+    #{css :light}
   </head>
-  <body>
+  <body class="blueprint" id="#{h @page}">
     <div class="asciidoc">#{@content}</div>
   </body>
 </html>
